--- a/src/app/components/message-group/message-group.component.styl
+++ b/src/app/components/message-group/message-group.component.styl
@@ -10,7 +10,7 @@
 			&:before,
 			&:after
 				content: ""
-				border-top: 1px solid black
+				border-top: 2px solid #999
 				width: 100%
 			&:before
 				margin-right: 10px
