--- a/src/styles.styl
+++ b/src/styles.styl
@@ -5,3 +5,17 @@ body
 	box-sizing: border-box
 	height: 100vh
 	font-family: 'Inconsolata', monospace;
+
+::-webkit-scrollbar
+	width: 8px
+
+::-webkit-scrollbar-track 
+	background: #f1f1f1
+	border-radius: 5px
+
+::-webkit-scrollbar-thumb
+	background: #aaa
+	border-radius: 5px
+
+::-webkit-scrollbar-thumb:hover
+	background: #555
